# home-suite-home

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: android-build.yml  docker-image.yml
deploy/homeserver/: README.md  docker-compose.yml  update-home-suite-home.sh  update-sweet.sh
docs/: android-testing.md  mobile-notes-app-plan.md  notes-collab-migration-checklist.md  unified-mobile-sync-plan.md
mobile/: app.json  index.tsx  metro.config.js  package-lock.json  package.json
mobile/app/: index.tsx  servers.tsx
mobile/src/components/: notes-shell.tsx
mobile/src/lib/: loro-note.ts
mobile/src/repositories/: local-store.ts
mobile/src/sync/: api.ts
notes-suite-notes/: app.json  metro.config.js  package-lock.json  package.json
notes-suite-notes/app/: appearance.tsx  index.tsx  servers.tsx
notes-suite-notes/src/components/: notes-icons.tsx  notes-rich-editor.tsx  notes-shell.tsx
notes-suite-notes/src/lib/: app-context.tsx
notes-suite-notes/src/repositories/: local-store.ts
notes-suite-notes/src/sync/: api.ts
notes-suite-notes/src/theme/: tokens.ts
server/: Cargo.toml  Dockerfile
server/src/: config.rs  error.rs  main.rs  models.rs  persistence.rs  routes.rs  state.rs  storage.rs  worker.rs  ws.rs
storage-dev/: state.json
storage-dev/diagrams/: homelab-flow-d843b294-089e-4312-9efb-aed571022d96.drawio
storage-dev/notes/Inbox/: complex-2997149b-1f77-4c64-aac4-dd2ebcc3ab93.md  (+13 more)
web/: Dockerfile  capacitor.config.json  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  index.css
(+126 files in other folders)
