[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.6", features = ["macros", "multipart", "ws"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3.31"
ical = "0.11.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
loro = "1.8.2"
pulldown-cmark = "0.13.0"
rand = "0.9.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sysinfo = "0.37.2"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-postgres = "0.7.15"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
urlencoding = "2.1.3"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
zip = { version = "4.6.1", default-features = false, features = ["deflate"] }

[dev-dependencies]
http-body-util = "0.1.3"
tower = { version = "0.5.2", features = ["util"] }
